# okapi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat  compile.sh  config  copy-assets.cmake  vcpkg.json
assets/: Sprite-0001.aseprite
assets/shaders/: shader.frag  shader.vert  vert.spv
include/: entity_system.h  logging.h
src/: actor.h  linked_list.h  main.cpp  screen.cpp  screen.h  transform.h
src/engine/: CMakeLists.txt  actor.cpp  physics.cpp  physics.h
src/engine/graphics/: graphics.cpp  graphics.h  mesh.h  pipeline.cpp  pipeline.h  render_system.h  swapchain.cpp  swapchain.h  types.h  upload_context.cpp  util.h
src/engine/gui/: CMakeLists.txt  gui.cpp  gui.h
src/engine/input/: CMakeLists.txt  input.cpp  input.h
src/engine/primitives/: CMakeLists.txt  cube.cpp  cube.h
src/engine/unused/: free_list.h  renderable.h
src/graphics/: CMakeLists.txt  graphics.cpp  graphics.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  render_system.cpp  render_system.h  renderable.h  renderer.h  texture.cpp  texture.h  types.h  upload_context.cpp  upload_context.h  util.h  vma.hpp  vulkan.h
src/gui/: gui.cpp  gui.h
src/primitives/: cube.cpp
src/unused/: renderable.cpp  vulkan_init.h
utils/: CMakeLists.txt  vulkan_utils.cpp  vulkan_utils.hpp
